Blender crashes when using F3 (Edit->Menu Search) while no active object in scene? #83880

Closed
opened 2020-12-17 08:51:25 +01:00 by Oleg · 21 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.79

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-16 23:32, hash: 3a1d1aaa86
Worked: 2.92.0 Alpha, branch: master, 5713626422

Short description of error
Blender crashes when using F3 (Edit->Menu Search) while no active object in scene.
It happens form time to time, I don't really understand if this is persistent issue or something on my side.

Exact steps for others to reproduce the error

  1. Open default Blender scene
  2. Delete all objects or select cube and delete (basically we want to have no any active object in scene)
  3. Press F3
  4. Blender crashes
BKE_modifiers_is_deformed_by_armature(Object * ob) Lines 727	C
ED_object_vgroup_selection_itemf_helper(const bContext * C, PointerRNA * UNUSED_ptr, PropertyRNA * UNUSED_prop, bool * r_free, const unsigned int selection_mask) Lines 746	C
rna_vertex_group_with_single_itemf(bContext * C, PointerRNA * ptr, PropertyRNA * prop, bool * r_free) Lines 769	C
RNA_property_enum_items_ex(bContext * C, PointerRNA * ptr, PropertyRNA * prop, const bool use_static, const EnumPropertyItem * * r_item, int * r_totitem, bool * r_free) Lines 1632	C
RNA_property_enum_items(bContext * C, PointerRNA * ptr, PropertyRNA * prop, const EnumPropertyItem * * r_item, int * r_totitem, bool * r_free) Lines 1664	C
RNA_property_enum_value(bContext * C, PointerRNA * ptr, PropertyRNA * prop, const unsigned char * identifier, int * r_value) Lines 1809	C
pyrna_string_to_enum(_object * item, PointerRNA * ptr, PropertyRNA * prop, int * r_value, const unsigned char * error_prefix) Lines 1265	C
pyrna_py_to_prop(PointerRNA * ptr, PropertyRNA * prop, void * data, _object * value, const unsigned char * error_prefix) Lines 1936	C
pyrna_struct_setattro(BPy_StructRNA * self, _object * pyname, _object * value) Lines 4518	C
 	[External Code]	
bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Lines 8522	C
menu_draw(const bContext * C, Menu * menu) Lines 875	C
UI_menutype_draw(bContext * C, MenuType * mt, uiLayout * layout) Lines 5745	C
menu_items_from_ui_create(bContext * C, wmWindow * win, ScrArea * area_init, ARegion * region_init, bool include_all_areas) Lines 677	C
UI_but_func_menu_search(uiBut * but) Lines 1133	C
wm_block_search_menu(bContext * C, ARegion * region, void * userdata) Lines 1690	C
ui_popup_block_refresh(bContext * C, uiPopupBlockHandle * handle, ARegion * butregion, uiBut * but) Lines 587	C
ui_popup_block_create(bContext * C, ARegion * butregion, uiBut * but, uiBlock *(*)(bContext *, ARegion *, void *) create_func, uiBlock *(*)(bContext *, uiPopupBlockHandle *, void *) handle_create_func, void * arg, void(*)(void *) arg_free) Lines 824	C
UI_popup_block_invoke_ex(bContext * C, uiBlock *(*)(bContext *, ARegion *, void *) func, void * arg, void(*)(void *) arg_free, bool can_refresh) Lines 588	C
wm_search_menu_invoke(bContext * C, wmOperator * op, const wmEvent * event) Lines 1768	C
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Lines 1293	C
wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Lines 2134	C
wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Lines 2450	C
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Lines 2746	C
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Lines 2870	C
wm_event_do_handlers(bContext * C) Lines 3401	C
WM_main(bContext * C) Lines 638	C
main(int argc, const unsigned char * * UNUSED_argv_c) Lines 526	C
**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.79 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-16 23:32, hash: `3a1d1aaa86` Worked: 2.92.0 Alpha, branch: master, `5713626422` **Short description of error** Blender crashes when using F3 (Edit->Menu Search) while no active object in scene. It happens form time to time, I don't really understand if this is persistent issue or something on my side. **Exact steps for others to reproduce the error** 1. Open default Blender scene 2. Delete all objects or select cube and delete (basically we want to have no any active object in scene) 3. Press F3 4. Blender crashes ```lines BKE_modifiers_is_deformed_by_armature(Object * ob) Lines 727 C ED_object_vgroup_selection_itemf_helper(const bContext * C, PointerRNA * UNUSED_ptr, PropertyRNA * UNUSED_prop, bool * r_free, const unsigned int selection_mask) Lines 746 C rna_vertex_group_with_single_itemf(bContext * C, PointerRNA * ptr, PropertyRNA * prop, bool * r_free) Lines 769 C RNA_property_enum_items_ex(bContext * C, PointerRNA * ptr, PropertyRNA * prop, const bool use_static, const EnumPropertyItem * * r_item, int * r_totitem, bool * r_free) Lines 1632 C RNA_property_enum_items(bContext * C, PointerRNA * ptr, PropertyRNA * prop, const EnumPropertyItem * * r_item, int * r_totitem, bool * r_free) Lines 1664 C RNA_property_enum_value(bContext * C, PointerRNA * ptr, PropertyRNA * prop, const unsigned char * identifier, int * r_value) Lines 1809 C pyrna_string_to_enum(_object * item, PointerRNA * ptr, PropertyRNA * prop, int * r_value, const unsigned char * error_prefix) Lines 1265 C pyrna_py_to_prop(PointerRNA * ptr, PropertyRNA * prop, void * data, _object * value, const unsigned char * error_prefix) Lines 1936 C pyrna_struct_setattro(BPy_StructRNA * self, _object * pyname, _object * value) Lines 4518 C [External Code] bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Lines 8522 C menu_draw(const bContext * C, Menu * menu) Lines 875 C UI_menutype_draw(bContext * C, MenuType * mt, uiLayout * layout) Lines 5745 C menu_items_from_ui_create(bContext * C, wmWindow * win, ScrArea * area_init, ARegion * region_init, bool include_all_areas) Lines 677 C UI_but_func_menu_search(uiBut * but) Lines 1133 C wm_block_search_menu(bContext * C, ARegion * region, void * userdata) Lines 1690 C ui_popup_block_refresh(bContext * C, uiPopupBlockHandle * handle, ARegion * butregion, uiBut * but) Lines 587 C ui_popup_block_create(bContext * C, ARegion * butregion, uiBut * but, uiBlock *(*)(bContext *, ARegion *, void *) create_func, uiBlock *(*)(bContext *, uiPopupBlockHandle *, void *) handle_create_func, void * arg, void(*)(void *) arg_free) Lines 824 C UI_popup_block_invoke_ex(bContext * C, uiBlock *(*)(bContext *, ARegion *, void *) func, void * arg, void(*)(void *) arg_free, bool can_refresh) Lines 588 C wm_search_menu_invoke(bContext * C, wmOperator * op, const wmEvent * event) Lines 1768 C wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Lines 1293 C wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Lines 2134 C wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Lines 2450 C wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Lines 2746 C wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Lines 2870 C wm_event_do_handlers(bContext * C) Lines 3401 C WM_main(bContext * C) Lines 638 C main(int argc, const unsigned char * * UNUSED_argv_c) Lines 526 C ```
Author

Added subscriber: @DotBow

Added subscriber: @DotBow

#83943 was marked as duplicate of this issue

#83943 was marked as duplicate of this issue

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

There was a bug #83829 that caused crashes but it should've been fixed in the build you're using.

Please open Blender's installation directory and double click on the blender_debug_log.cmd. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt (or simply type %TEMP% into the path bar of the Windows Explorer).

2019_12_04_upload_icon_developer_blender_org.png

There was a bug #83829 that caused crashes but it should've been fixed in the build you're using. Please open Blender's installation directory and double click on the `blender_debug_log.cmd`. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in `C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt` (or simply type `%TEMP%` into the path bar of the Windows Explorer). ![2019_12_04_upload_icon_developer_blender_org.png](https://archive.blender.org/developer/F8190038/2019_12_04_upload_icon_developer_blender_org.png)
Author
Hi! Here is the files: [blender_system_info.txt](https://archive.blender.org/developer/F9514656/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F9514655/blender_debug_output.txt) [blender.crash.txt](https://archive.blender.org/developer/F9514662/blender.crash.txt)

@DotBow Thank you for the files. From the stack trace I suspect that this is triggered by one of your enabled add-ons. Could you please go through them one by one and check after which one it starts to crash?

@DotBow Thank you for the files. From the stack trace I suspect that this is triggered by one of your enabled add-ons. Could you please go through them one by one and check after which one it starts to crash?
Author

If I disable all my addons result is the same:
blender_system_info.txt

blender_debug_output.txt

blender.crash.txt

If I disable **all** my addons result is the same: [blender_system_info.txt](https://archive.blender.org/developer/F9514785/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F9514784/blender_debug_output.txt) [blender.crash.txt](https://archive.blender.org/developer/F9514783/blender.crash.txt)

Added subscriber: @EchoDot

Added subscriber: @EchoDot

This comment was removed by @EchoDot

*This comment was removed by @EchoDot*

@DotBow @EchoDot Could you please open Blender's installation directory and double click on the blender_factory_startup.cmd. This will start Blender with temporary factory default settings. Does it still crash?

I can't reproduce this in the referenced version or the current master.

@DotBow @EchoDot Could you please open Blender's installation directory and double click on the `blender_factory_startup.cmd`. This will start Blender with temporary factory default settings. Does it still crash? I can't reproduce this in the referenced version or the current master.
Author

Here is the crash with default Blender settings:

blender_system_info.txt

blender_debug_output.txt

blender.crash.txt

Here is the crash with default Blender settings: [blender_system_info.txt](https://archive.blender.org/developer/F9514805/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F9514804/blender_debug_output.txt) [blender.crash.txt](https://archive.blender.org/developer/F9514803/blender.crash.txt)

Still crashes. Btw I am using the latest alpha build.

Still crashes. Btw I am using the latest alpha build.
Author

And another one with blender_factory_startup.cmd:
blender_system_info.txt

blender_debug_output.txt

blender.crash.txt

And another one with blender_factory_startup.cmd: [blender_system_info.txt](https://archive.blender.org/developer/F9514811/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F9514810/blender_debug_output.txt) [blender.crash.txt](https://archive.blender.org/developer/F9514809/blender.crash.txt)

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

@DotBow Apologies, I must have misread your report when you initially posted this. I can reproduce the issue and this was introduced by ad7682ffdb. It needs to check if the ob is NULL before calling the function or there needs to be a check in BKE_modifiers_is_deformed_by_armature if the input is NULL.

@DotBow Apologies, I must have misread your report when you initially posted this. I can reproduce the issue and this was introduced by ad7682ffdb. It needs to check if the `ob` is `NULL` before calling the function or there needs to be a check in `BKE_modifiers_is_deformed_by_armature` if the input is `NULL`.

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Gaia Clary was assigned by Dalai Felinto 2020-12-18 18:09:24 +01:00

Hi Gaia, is this something you could look at?

Hi Gaia, is this something you could look at?

Added subscribers: @TheOldBen, @lowpolysaac

Added subscribers: @TheOldBen, @lowpolysaac

This issue was referenced by d283a093d6

This issue was referenced by d283a093d6643fc63264d95bed46af0646788277
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83880
No description provided.