fix T83880: Added check for valid context object to avoid null pointer exception when no object in scene